refactor: update AgamaInjiVerificationServiceImpl.java